第一个测试版本

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^6.1.2",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
+    "react-quill-new": "^3.7.0",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
